Fix T68370, T74973: Cycles cryptomatte not working when other passes are enabled

Solution found by Blazej Floch.